// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex /> flex properties should match snapshot when alignItems is set baseline 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 bhTlAn"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when alignItems is set center 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 kXRscT"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when alignItems is set flex-end 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 iBQsA-d"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when alignItems is set flex-start 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 cRJSOe"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when alignItems is set stretch 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexDirection is set column 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 kYTyfP"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexDirection is set column-reverse 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fXbjzC"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexDirection is set row 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexDirection is set row-reverse 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 kfHegK"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexWrap is set nowrap 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexWrap is set wrap 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 drTQnS"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexWrap is set wrap-reverse 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 ehlngv"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when justifyContent is set center 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 jEbyCq"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when justifyContent is set flex-end 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 dtlxhc"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when justifyContent is set flex-start 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when justifyContent is set space-around 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 iwsdkP"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when justifyContent is set space-between 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 GiFYW"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when all margin directions are set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 cTVvps Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when all padding directions are set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 kIRRBI Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when margin is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 cQbIpy Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when padding is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 eumCBp Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when responsive margin is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jbzyAA Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when responsive padding is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 cUCRhM Flex__StyledFlex-sc-11ryoct-0 fZA-dMP"
  />
</DocumentFragment>
`;
